terminal connect worng fix

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -112,7 +112,7 @@
               </a>
             </div>
             <div class="col-md-3">
-              <a href="#" onclick="window.open('http://localhost:8080', '_blank', 'width=800,height=600'); return false;" class="btn btn-dark w-100 d-flex align-items-center justify-content-center">
+              <a href="#" onclick="window.open('http://' + window.location.hostname + ':8080', '_blank', 'width=800,height=600'); return false;" class="btn btn-dark w-100 d-flex align-items-center justify-content-center">
                 <i class="bi bi-terminal me-2"></i>
                 Terminal
               </a>
