--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -577,6 +577,7 @@
       </ul>
     </div>
     
+    {% if current_user.is_authenticated %}
     <div class="mt-auto p-3 border-top" style="border-color: var(--border-color);">
       <div class="dropdown">
         <a href="#" class="user-dropdown d-flex align-items-center" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false">
@@ -602,6 +603,7 @@
         </ul>
       </div>
     </div>
+    {% endif %}
   </nav>
   
   <!-- Content -->
